--- a/views/users_homepage.jade
+++ b/views/users_homepage.jade
@@ -4,6 +4,6 @@ block content
   h1 User Homepage
   h2= user.email
   p 
-    a(href='/users/' + email + '/calenders/new') Create new calender
+    a(href='/calenders/new') Create new calender
 
   h3 Calenders:
