Map showing with editable polygon and coordinates displayed dynamically.

--- a/views/new_calender.jade
+++ b/views/new_calender.jade
@@ -1,54 +1,66 @@
-extends layout
+doctype html
+html
+  head
+    title Drawing tools
+    link(rel='stylesheet', href='/stylesheets/style.css')
+    meta(name='viewport', content='initial-scale=1.0, user-scalable=no')
+    meta(charset='utf-8')
+    style.
+      html, body {
+      height: 100%;
+      margin: 0;
+      padding: 0;
+      }
 
-block content
-  h1 Create new calender
-  p= user.email + " is signed in."
-
-  h3 STEPS:
-  p
-    ul
-      li 1. Enter an address for the starting point
-      li 2. Select number of location zones (from 1 to 14).  
-      li 3. A map will appear for each zone.  Select an area for each map.
-      li 4. Select a day (or multiple days) of the week for each zone.
-      li 5. Select estimated time for each appointment (ex. 0.25 = 15 min, 1.5 = 1 hour 30 min)
-  form(name='calenderForm', id='calenderForm', action='/calenders/', method='post')
-    p Enter an address for the starting point
-      p Street
-        input(id='street', name='street')
-      p City
-        input(id='city', name='city') 
-    p Select number of location zones
-      select(name='zoneQuantity', id='zoneQuantity')
-        option(value= 1) 1
-        option(value= 2) 2
-        option(value= 3) 3
-        option(value= 4) 4
-        option(value= 5) 5
-        option(value= 6) 6
-        option(value= 7) 7
-        option(value= 8) 8
-        option(value= 9) 9
-        option(value= 10) 10
-        option(value= 11) 11
-        option(value= 12) 12
-        option(value= 13) 13
-        option(value= 14) 14
-      p
-        button(type='submit', name='submitButton',id='submitButton') Submit
-  p Experiment with initial map setup
-
-  h1 Calculate your route
-  form#calculate-route(name='calculate-route', action='#', method='get')
-    label(for='from') From:
-    input#from(type='text', name='from', required='required', placeholder='An address', size='30')
-    a#from-link(href='#') Get my position
-    br
-    label(for='to') To:
-    input#to(type='text', name='to', required='required', placeholder='Another address', size='30')
-    a#to-link(href='#') Get my position
-    br
-    input(type='submit')
-    input(type='reset')
-  #map
-  p#error
+  body
+    h1 SKedule Navigator - Create schedule zones
+    #map
+    
+    script.
+      var randColor = function(){
+        var color = Math.random();
+        if(color < .5){
+          return '#C80000'
+        }
+        else{
+          return '#3300FF'
+        }
+      }
+      function initMap() {
+        var map = new google.maps.Map(document.getElementById('map'), {
+          center: {lat: 39.7392358, lng: -104.990251},
+          zoom: 10
+        });
+        var drawingManager = new google.maps.drawing.DrawingManager({
+          drawingMode: google.maps.drawing.OverlayType.MARKER,
+          drawingControl: true,
+          drawingControlOptions: {
+            position: google.maps.ControlPosition.TOP_CENTER,
+            drawingModes: [
+              google.maps.drawing.OverlayType.POLYGON,
+              google.maps.drawing.OverlayType.CIRCLE,
+            ]
+          },
+          markerOptions: {icon: 'images/beachflag.png'},
+          polygonOptions: {
+            fillColor: randColor(),
+            fillOpacity: .25,
+            strokeWeight: 1,
+            clickable: false,
+            editable: true,
+            draggable: true
+       
+           },
+          circleOptions: {
+            fillColor: '#ffff00',
+            fillOpacity: .25,
+            strokeWeight: 1,
+            clickable: false,
+            editable: true,
+            zIndex: 1,
+            draggable: true
+          }
+        });
+        drawingManager.setMap(map);
+      }
+    script(src='https://maps.googleapis.com/maps/api/js?key=' + process.env.YOUR_API_KEY + '&signed_in=true&libraries=drawing&callback=initMap', async='', defer='')
