--- a/views/layout.jade
+++ b/views/layout.jade
@@ -7,78 +7,13 @@ html
     title Find a route using Geolocation and Google Maps API
     script(src='http://maps.google.com/maps/api/js?sensor=true')
     script(src='http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js')
-    script.
-      function calculateRoute(from, to) {
-      // Center initialized to Naples, Italy
-      var myOptions = {
-      zoom: 10,
-      center: new google.maps.LatLng(40.84, 14.25),
-      mapTypeId: google.maps.MapTypeId.SATELLITE
-      };
-      // Draw the map
-      var mapObject = new google.maps.Map(document.getElementById("map"), myOptions);
-      var directionsService = new google.maps.DirectionsService();
-      var directionsRequest = {
-      origin: from,
-      destination: to,
-      travelMode: google.maps.DirectionsTravelMode.DRIVING,
-      unitSystem: google.maps.UnitSystem.METRIC
-      };
-      directionsService.route(
-      directionsRequest,
-      function(response, status)
-      {
-      if (status == google.maps.DirectionsStatus.OK)
-      {
-      new google.maps.DirectionsRenderer({
-      map: mapObject,
-      directions: response
+    script(type='text/javascript').
+      var map;
+      function initMap() {
+      map = new google.maps.Map(document.getElementById('map'), {
+      center: {lat: -34.397, lng: 150.644},
+      zoom: 8
       });
-      }
-      else
-      $("#error").append("Unable to retrieve your route<br />");
-      }
-      );
-      }
-      $(document).ready(function() {
-      // If the browser supports the Geolocation API
-      if (typeof navigator.geolocation == "undefined") {
-      $("#error").text("Your browser doesn't support the Geolocation API");
-      return;
-      }
-      $("#from-link, #to-link").click(function(event) {
-      event.preventDefault();
-      var addressId = this.id.substring(0, this.id.indexOf("-"));
-      navigator.geolocation.getCurrentPosition(function(position) {
-      var geocoder = new google.maps.Geocoder();
-      geocoder.geocode({
-      "location": new google.maps.LatLng(position.coords.latitude, position.coords.longitude)
-      },
-      function(results, status) {
-      if (status == google.maps.GeocoderStatus.OK)
-      $("#" + addressId).val(results[0].formatted_address);
-      else
-      $("#error").append("Unable to retrieve your address<br />");
-      });
-      },
-      function(positionError){
-      $("#error").append("Error: " + positionError.message + "<br />");
-      },
-      {
-      enableHighAccuracy: true,
-      timeout: 10 * 1000 // 10 seconds
-      });
-      });
-      $("#calculate-route").submit(function(event) {
-      event.preventDefault();
-      calculateRoute($("#from").val(), $("#to").val());
-      });
-      });
-    style(type='text/css').
-      #map {
-      width: 500px;
-      height: 400px;
-      margin-top: 10px;
       }
 
   body
